adding sub-variants

--- a/index.html
+++ b/index.html
@@ -76,15 +76,13 @@
 </select>&nbsp;
 
 <select id="VariantChoice" onchange="ResetGUI()">
-  <option value="Persian" selected="selected">Variant: Persian Chess</option>
-  <option value="Citadel">Variant: Classic Citadel</option>
-  <option value="ASE">Variant: ASE 911</option>
+  <option value="Persian" selected="selected">Variant: Persian Princess</option>
+  <option value="Citadel">Variant: Celtic Citadel</option>
+  <option value="ASE">Variant: Egyptian Eye</option>
 </select>
 
 <textarea name="movelist" id="movelist" disabled="disabled" >
-IMPORTANT: 
-Some users with apparently insufficient knowledge about the design of a Chess variant, are under-rating this game, without pointing me to an specific issue or bug that I can really work on. Unfortunately this behavior reduces the chance that other users also download, try and learn Chess 911.
-Please DO NOT let this happen! Chess 911 is the result of 9 years (on and off) design and development work. If you play and like this game, then please give it an appropriate rating and review on Google Play.
+If you play and like this game, please give it a rating and review on Google Play and help others to find this variant too. A good app rating increase the chance that other users also find this game on Google Play.
 </textarea>
 
 </div>
