adding handicap positions

--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
   <option value="ASE">Variant: Egyptian Eye</option>
 </select>
 
+<select id="AltFen" onchange="AltFEN()">
+  <option value="0" selected="selected">STD</option>
+  <option value="1">TP-1</option>
+  <option value="2">TP-2</option>
+  <option value="3">TP-3</option>
+  <option value="4">TP-4</option>
+  <option value="5">TP-5</option>
+</select>
+
+
 <textarea name="movelist" id="movelist" disabled="disabled" >
 If you play and like this game, please give it a rating and review on Google Play and help others to find this variant too. A good app rating increase the chance that other users also find this game on Google Play.
 </textarea>
