bugfix STD, adding TP6 and TP7

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
   <option value="3">TP-3</option>
   <option value="4">TP-4</option>
   <option value="5">TP-5</option>
+  <option value="6">TP-6</option>
+  <option value="7">TP-7</option>
 </select>
 
 
