send pgn by mail

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <img src="img/footer/run.png" id="run-button" title="Start Engine Demo" onclick="StartDemo();">
     <img src="img/footer/stop.png" id="stop-button" title="Stop Demo" onclick="StopDemo();">
     <img src="img/footer/fen.png" id="fen-button" title="Show/Set FEN" onclick="SetFen();">
-    <img src="img/footer/save.png" id="save-button" title="Save PGN" onclick="ShowPGN();">
+    <img src="img/footer/save.png" id="save-button" title="Save PGN" onclick="SendPGN();">
     <img src="img/footer/help.png" id="help-button" title="Help" onclick="Help();">
 </div>
 
