fix theme color icon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 
 <div id="side">
-    <img src="img/footer/blue.png" id="theme-button" onclick="ChangeTheme();">
+    <img src="img/footer/brown.png" id="theme-button" onclick="ChangeTheme();">
     <img src="img/footer/new.png" id="new-button" title="New Game" onclick="ResetGUI();">
     <img src="img/footer/flip.png" id="flip-button" title="Flip Board" onclick="Flip();">
     <img src="img/footer/takeback.png" id="takeback-button" title="Take Back" onclick="TakeBack();">
