--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8" />
+<title>Play Persian Chess</title>
 <link rel='stylesheet' href='css/chess911-standalone.css' type='text/css' media='all' />
         <script src="js/json3.min.js"></script>
         <script src="js/jquery-1.10.1.min.js"></script>
