--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div id="side">
     <img src="img/footer/brown.png" id="theme-button" onclick="ChangeTheme();">
-    <img src="img/footer/new.png" id="new-button" title="New Game" onclick="ResetGUI();">
+    <img src="img/footer/new.png" id="new-button" title="New Game" onclick="ResetGame();">
     <img src="img/footer/flip.png" id="flip-button" title="Flip Board" onclick="Flip();">
     <img src="img/footer/takeback.png" id="takeback-button" title="Take Back" onclick="TakeBack();">
     <img src="img/footer/play.png" id="play-button" title="Move Now" onclick="MoveNow();">
@@ -76,10 +76,11 @@
   <option value="60">60 Sec</option>
 </select>&nbsp;
 
-<select id="VariantChoice" onchange="ResetGUI()">
+<select id="VariantChoice" onchange="ResetGame()">
   <option value="Persian" selected="selected">Variant: Persian Princess</option>
   <option value="Citadel">Variant: Celtic Citadel</option>
   <option value="ASE">Variant: Egyptian Eye</option>
+  <option value="Orbital">Variant: Orbital Omega</option>
 </select>
 
 <select id="AltFen" onchange="AltFEN()">
