--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  Copyright 2014 Anooshiravan Ahmadi - MCE @ Schuberg Philis
  Released under the GPL license
  Based on the open source projects mentioned at:
- http://www.PersianChess.com/Copyright
+ http://www.PersianChess.com/About
  Redistribution of this game design, rules and the engine 
  requires written permission from the author.
 ----------------------------------------------------------------
@@ -78,14 +78,14 @@
 </select>&nbsp;
 
 <select id="VariantChoice" onchange="ResetGame()">
-  <option value="Persian" selected="selected">Variant: Persian Princess</option>
-  <option value="Citadel">Variant: Celtic Citadel</option>
-  <option value="ASE">Variant: Egyptian Eye</option>
-  <option value="Orbital">Variant: Orbital Omega</option>
+  <option value="Persian" selected="selected">Persian Princess</option>
+  <option value="Citadel">Celtic Citadel</option>
+  <option value="ASE">Egyptian Eye</option>
+  <option value="Orbital">Orbital Omega</option>
 </select>
 
 <select id="AltFen" onchange="AltFEN()">
-  <option value="0" selected="selected">STD</option>
+  <option value="0" selected="selected">Def.</option>
   <option value="1">TP-1</option>
   <option value="2">TP-2</option>
   <option value="3">TP-3</option>
