--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <option value="Persian" selected="selected">Persian Princess</option>
   <option value="Citadel">Celtic Citadel</option>
   <option value="ASE">Egyptian Eye</option>
-  <option value="Orbital">Orbital Omega</option>
+  <option value="Oriental">Oriental Omega</option>
 </select>
 
 <select id="AltFen" onchange="AltFEN()">
