--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@ function onDeviceReady(){
 }
 
 
+// Load Audio
+LoadAudio();
+
 // Sizing the screen
 
 window.addEventListener("touchmove", function(e) {
