--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
 <meta charset="UTF-8" />
 <title>Play Persian Chess</title>
 <link rel='stylesheet' href='css/chess911-standalone.css' type='text/css' media='all' />
+<link rel="stylesheet" href="css/jquery.alerts.css" type="text/css" media="all" />
         <script src="js/json3.min.js"></script>
         <script src="js/jquery-1.10.1.min.js"></script>
-        <script src="phonegap.js"></script>
+		<script src="js/jquery.ui.draggable.js" type="text/javascript"></script>
+		<script src="js/jquery.alerts.js" type="text/javascript"></script>
+		
+		<script src="phonegap.js"></script>
 </head>
 <body>
 
