improvements suggested by Argo

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <img src="img/footer/flip.png" id="flip-button" title="Flip Board" onclick="Flip();">
     <img src="img/footer/takeback.png" id="takeback-button" title="Take Back" onclick="TakeBack();">
     <img src="img/footer/play.png" id="play-button" title="Move Now" onclick="MoveNow();">
-    <img src="img/footer/run.png" id="run-button" title="Start Engine Demo" onclick="StartDemo();">
-    <img src="img/footer/stop.png" id="stop-button" title="Stop Demo" onclick="StopDemo();">
+    <img src="img/footer/engine.png" id="engine-button" title="Start/Stop Engine" onclick="EngineOnOff();">
+    <img src="img/footer/audio.png" id="audio-button" title="Audio On/Off" onclick="AudioOnOff();">
     <img src="img/footer/fen.png" id="fen-button" title="Show/Set FEN" onclick="SetFen();">
     <img src="img/footer/save.png" id="save-button" title="Save PGN" onclick="SendPGN();">
     <img src="img/footer/help.png" id="help-button" title="Help" onclick="Help();">
@@ -235,8 +235,8 @@ function imgResize(imgsize)
         document.getElementById("save-button").style.height = document.getElementById("save-button").style.width =
         document.getElementById("new-button").style.height = document.getElementById("new-button").style.width =
         document.getElementById("fen-button").style.height = document.getElementById("fen-button").style.width =
-        document.getElementById("run-button").style.height = document.getElementById("run-button").style.width =
-        document.getElementById("stop-button").style.height = document.getElementById("stop-button").style.width =
+        document.getElementById("engine-button").style.height = document.getElementById("engine-button").style.width =
+        document.getElementById("audio-button").style.height = document.getElementById("audio-button").style.width =
         document.getElementById("takeback-button").style.height = document.getElementById("takeback-button").style.width =
         document.getElementById("play-button").style.height = document.getElementById("play-button").style.width =
         document.getElementById("help-button").style.height = document.getElementById("help-button").style.width =
