--- a/index.html
+++ b/index.html
@@ -67,18 +67,22 @@
 <div id="console" class="console">
 
 <select id="ThinkTimeChoice" onchange="ManualThinkTime(this.value);">
-  <option value="2">2 Sec</option>
   <option selected="selected" value="3">3 Sec</option>
   <option value="5">5 Sec</option>
-  <option value="7">7 Sec</option>
   <option value="10">10 Sec</option>
-  <option value="15">15 Sec</option>
   <option value="20">20 Sec</option>
-  <option value="25">25 Sec</option>
   <option value="30">30 Sec</option>
   <option value="45">45 Sec</option>
   <option value="60">60 Sec</option>
-  <option value="manual">Enter manually</option>
+  <option value="manual">Enter think time</option>
+  <option value="na">---------------</option>
+  <option value="d2">Depth:2</option>
+  <option value="d3">Depth:3</option>
+  <option value="d4">Depth:4</option>
+  <option value="d5">Depth:5</option>
+  <option value="d6">Depth:6</option>
+  <option value="d7">Depth:7</option>
+  <option value="d8">Depth:8</option>
 </select>&nbsp;
 
 <select id="VariantChoice" onchange="ResetGame()">
