--- a/index.html
+++ b/index.html
@@ -105,6 +105,19 @@ If you like this game, please do not forget to give it a rating and review on Go
 </div>
 
 <script>  
+browserSupportsWebWorkers();
+
+function browserSupportsWebWorkers() {
+  if (typeof window.Worker === "function")
+  {
+    alert ("Webworker supported.")
+  }
+  else
+  {
+    alert ("Webworker NOT supported.") 
+  }
+}
+
 
 // Init Chess Board
 var cfg = {
