--- a/index.html
+++ b/index.html
@@ -37,6 +37,56 @@
 <div>
 <div id="board">
         <script src="js/PersianChessBoard.js"></script>
+
+        <script id="engine" type="javascript/worker">
+          var engine_scripts_loaded = false;
+          var url; 
+          self.onmessage = function (e) {
+                var message = e.data;
+                var msg_title = message.substr(0, message.indexOf('::'));
+                var msg_body = message.substr(message.indexOf('::') + 2);
+                if (msg_title == "init")
+                {
+                    if (msg_body == "hello") postMessage("init::hi");
+                    else ProcessGuiMessage(message);
+                }
+                else if (msg_title == "load")
+                {
+                    console.log(">> ENGINE: Absolute path received: " + msg_body)
+                    LoadEngineScripts(msg_body);
+                }
+                else
+                {
+                    ProcessGuiMessage(message);
+                }
+          }
+          function LoadEngineScripts(absolute_path)
+          {
+              console.log (">> ENGINE: Absolute path: " + absolute_path);
+              // ══════════════════════════
+              //  Load Engine files
+              // ══════════════════════════
+              importScripts(
+                absolute_path + "PersianChessEngine.js",
+                absolute_path + "Defs.js",
+                absolute_path + "Variants.js",
+                absolute_path + "Competitor.js",
+                absolute_path + "InputOutput.js",
+                absolute_path + "Board.js",
+                absolute_path + "Book.js",
+                absolute_path + "MoveGenerator.js",
+                absolute_path + "MoveHandler.js",
+                absolute_path + "Evaluator.js",
+                absolute_path + "PvTable.js",
+                absolute_path + "Search.js",
+                absolute_path + "Protocol.js",
+                absolute_path + "Init.js"
+              );
+              console.log (">> ENGINE: Loaded!");
+              postMessage("init::loaded");
+          }
+        </script>
+
         <script src="js/PersianChess.js"></script>
 </div>
 
