--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <img src="img/footer/new.png" id="new-button" title="New Game" onclick="StartNewGame();">
     <img src="img/footer/flip.png" id="flip-button" title="Flip Board" onclick="FlipBoard();">
     <img src="img/footer/takeback.png" id="takeback-button" title="Take Back" onclick="TakeBack();">
-    <img src="img/footer/play.png" id="play-button" title="Move Now" onclick="Forward();">
+    <img src="img/footer/play.png" id="play-button" title="Move Now" onclick="MoveForward();">
     <img src="img/footer/engine.png" id="engine-button" title="Start/Stop Engine" onclick="EngineOnOff();">
     <img src="img/footer/audio_off.png" id="audio-button" title="Audio On/Off" onclick="AudioOnOff();">
     <img src="img/footer/fen.png" id="fen-button" title="Show/Set FEN" onclick="SetFen();">
