--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <option value="d|8">Depth:8</option>
 </select>&nbsp;
 
-<select id="VariantChoice" onchange="SetVariant()">
+<select id="VariantChoice" onchange="StartNewGame();">
   <option value="Persian" selected="selected">Persian Princess</option>
   <option value="Citadel">Celtic Citadel</option>
   <option value="ASE">Egyptian Eye</option>
