--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script src="js/Libraries/jquery.alerts.js" type="text/javascript"></script>
   <script src="js/Libraries/jquery.cookie.js" type="text/javascript"></script>
   <script src="js/Libraries/audio5.js"></script>
+  <script src="js/Libraries/spin.min.js"></script>
   <script src="phonegap.js"></script>
 </head>
 <body>
