--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <title>Play Persian Chess</title>
 <link rel='stylesheet' href='css/persianchess.css' type='text/css' media='all' />
 <link rel="stylesheet" href="css/jquery.alerts.css" type="text/css" media="all" />
-  <script src="js/Libraries/json3.min.js"></script>
-  <script src="js/Libraries/jquery-2.1.4.min.js"></script>
-  <script src="js/Libraries/jquery.ui.draggable.js" type="text/javascript"></script>
-  <script src="js/Libraries/jquery.alerts.js" type="text/javascript"></script>
-  <script src="js/Libraries/jquery.cookie.js" type="text/javascript"></script>
-  <script src="js/Libraries/audio5.js"></script>
-  <script src="js/Libraries/spin.min.js"></script>
+  <script src="js/lib/json3.min.js"></script>
+  <script src="js/lib/jquery-2.1.4.min.js"></script>
+  <script src="js/lib/jquery.ui.draggable.js" type="text/javascript"></script>
+  <script src="js/lib/jquery.alerts.js" type="text/javascript"></script>
+  <script src="js/lib/jquery.cookie.js" type="text/javascript"></script>
+  <script src="js/lib/audio5.js"></script>
+  <script src="js/lib/spin.min.js"></script>
   <script src="phonegap.js"></script>
 </head>
 <body>
@@ -38,6 +38,7 @@
 <div>
 <div id="board">
         <script src="js/PersianChessBoard.js"></script>
+        <script src="js/PersianChessAudio.js"></script>
 </div>
 
 <div id="side">
@@ -49,8 +50,8 @@
     <img src="img/footer/engine.png" id="engine-button" title="Start/Stop Engine" onclick="EngineOnOff();">
     <img src="img/footer/audio_off.png" id="audio-button" title="Audio On/Off" onclick="AudioOnOff();">
     <img src="img/footer/fen.png" id="fen-button" title="Show/Set FEN" onclick="SetPosition();">
-    <img src="img/footer/save.png" id="save-button" title="Save PGN" onclick="SendPGN();">
-    <img src="img/footer/help.png" id="help-button" title="Help" onclick="Help();">
+    <img src="img/footer/save.png" id="save-button" title="Save PGN" onclick="SendGameByMail();">
+    <img src="img/footer/help.png" id="help-button" title="Help" onclick="About();">
 </div>
 
 <div id="gui_container" class="gui_container">
@@ -113,6 +114,7 @@ If you like this game, please do not forget to give it a rating and review on Go
 $( "#movelist" ).hide();
 
 $( "#toggle_console" ).click(function() {
+  PlaySound(click);
   $( "#console" ).toggle();
   $( "#movelist" ).toggle();
 });
