platform/audio/localstorage

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <div>
 <div id="board">
         <script src="js/PersianChessBoard.js"></script>
-        <script src="js/PersianChessAudio.js"></script>
+        <script src="js/PersianChessPlatform.js"></script>
 </div>
 
 <div id="side">
