variants and logo square

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <option value="Oriental">Oriental Omega</option>
 </select>
 
-<select id="AltFen" onchange="SetTrainingPosition()">
+<select id="TP" onchange="SetTrainingPosition()">
   <option value="0" selected="selected">Def.</option>
   <option value="1">TP-1</option>
   <option value="2">TP-2</option>
