--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <link rel='stylesheet' href='css/persianchess.css' type='text/css' media='all' />
   <script src="js/lib/jquery-2.1.4.min.js"></script>
   <script src="js/lib/jquery.mobile-1.4.5.min.js"></script>
-  <script src="js/lib/jquery.alerts.js" type="text/javascript"></script>
+  <script src='js/lib//fastclick.js' type='application/javascript' ></script>
   <script src="js/lib/jquery.cookie.js" type="text/javascript"></script>
   <script src="js/lib/audio5.js"></script>
   <script src="js/lib/spin.min.js"></script>
@@ -38,8 +38,7 @@
   <div role="main" class="ui-content" style="padding: 0px">
     <div class="ui-grid-a">
       <div id="board_container" class="ui-block-a" style="background-color: black; padding: 0px; margin: 0px;">
-        <div id="board">
-        </div>
+        <div id="board" data-role="none"></div>
       </div>
       <div id="controls_container" class="ui-block-b">
         <a href="#settings_panel" class="ui-btn ui-btn-inline ui-icon-bars ui-btn-icon-notext"></a>
@@ -142,6 +141,13 @@
 <script src="js/PersianChessBoard.js"></script>
 <script src="js/PersianChessPlatform.js"></script>
 <script src="js/PersianChess.js"></script>
+
+
+<script>
+  $(function() {
+      FastClick.attach(document.board);
+  });
+</script>
 
 </body>
 </html>
