--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 <script>
   $(function() {
-      FastClick.attach(document.board);
+      FastClick.attach(document.body);
   });
 </script>
 
