--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </div>
 
   <!-- Game over pupup -->
-  <div data-role="popup" id="gameover_popup" class="ui-content"></div>
+  <div data-role="popup" id="gameover_popup" class="ui-content" data-position-to="#console_container"></div>
 
 <script src="js/PersianChessBoard.js"></script>
 <script src="js/PersianChessPlatform.js"></script>
